--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ Scrapy==1.6.0
 service-identity==18.1.0
 six==1.12.0
 SQLAlchemy==1.3.5
-Twisted==19.2.1
+Twisted
+==19.2.1
 w3lib==1.20.0
 zope.interface==4.6.0
